--- a/nav.css
+++ b/nav.css
@@ -1,19 +1,68 @@
-
- body{
-    margin: 70px;
+nav{
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
     font-family: "Tahoma";
     font-size: large;
-    background-color: #567189;
 
  }
  ul li{
     list-style-type: none;
     margin-bottom: 10px;
     display: block;
-    align-content: flex-end;
     border: 4px solid #7B8FA1;
     padding: 15px 15px 15px 15px;
     background-color: #FAD6A5;
     width: 200px;
     text-align: center; 
  }
+ nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    }
+    nav>ul li {
+    width: 150px; 
+    position: relative;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 10px;
+    display: block;
+    border: 4px solid #7B8FA1;
+    padding: 15px 15px 15px 15px;
+    background-color: #FAD6A5;
+    }
+    nav ul li {
+    margin-bottom: 2px;
+    }
+    nav a {
+    text-decoration: none;
+    display: block;
+    padding: 15px 15px 15px 15px;
+    }
+    
+    nav a:link{
+    background-color: wheat;
+    }
+    nav a:hover, nav a:focus {
+    background-color: wheat;
+    }
+    nav a:active{
+    background-color: wheat;
+    }
+    
+
+    nav ul>li ul {
+    position: absolute;
+    margin-top: 0;
+    margin-left: 100%;
+    display: none;
+    }
+    
+    nav>ul>li:hover>ul{
+    display: block;
+    }
+    main{
+        display: flex;
+        flex-direction: row-reverse;
+    }
